--- a/1.html
+++ b/1.html
@@ -5,16 +5,18 @@
     <title>Главная</title>
 </head>
 <body>
+<div class="div_center">
 <ul>
     <li><a class="active" href="1.html" name="up">Главная</a></li>
     <li><a href="login_page.html">Вход</a></li>
     <li><a href="registration_page.html">Регистрация</a></li>
     <li><a href="trash1.html">Корзина</a></li>
+    <li><a href="Admin.html"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTmwoIDVrYVdpsTCEWvKhDPy4uTkxT64dm51W086fDV9d_-j4YTlg" width="35px" height="35px"></a></li>
 </ul>
 
 
 
-<div id="container">
+<div id="container"> <br> <br>
     <div id="header">Главная</div>
 <!--    <ul style="color: white"><p><b>Home</b></p></ul>-->
     <div id="sidebar">
@@ -68,6 +70,7 @@
     </center>
     </div>
     </table>
+</div>
 </div>
 </body>
 </html>
