--- a/cheap.html
+++ b/cheap.html
@@ -5,6 +5,7 @@
     <title>Главная</title>
 </head>
 <body>
+<div class="div_center">
 <ul>
     <li><a class="active" href="1.html" name="up">Главная</a></li>
     <li><a href="login_page.html">Вход</a></li>
@@ -53,6 +54,7 @@
 <!--        </table>-->
     </div>
     <div id="footer">&copy;</div>
+</div>
 </div>
 </body>
 </html>
