--- a/expensive.html
+++ b/expensive.html
@@ -5,13 +5,13 @@
     <title>Главная</title>
 </head>
 <body>
+<div class="div_center">
 <ul>
     <li><a class="active" href="1.html" name="up">Главная</a></li>
     <li><a href="login_page.html">Вход</a></li>
     <li><a href="registration_page.html">Регистрация</a></li>
     <li><a href="trash1.html">Корзина</a></li>
 </ul>
-
 <div id="container">
     <a name="up"><div id="header">Дорогие</div></a>
     <!--    <ul style="color: white"><p><b>Home</b></p></ul>-->
@@ -49,6 +49,7 @@
         <!--            <li>в Древней Греции морями повелевали боги: Плутон, Нептун и Тритон.</li>-->
         <!--        </ul>-->
         </br>
+    </div>
         <div>
 <!--            <table>-->
                 <a href="1.html#up"><img src="img/up.jpg" width="25" height="25"></a>
@@ -56,7 +57,8 @@
 <!--            </table>-->
         </div>
     </div>
-    <div id="footer">&copy;</div>
+    <div id="footer">&copy; bsharna</div>
+</div>
 </div>
 </body>
 </html>
