--- a/trash1.html
+++ b/trash1.html
@@ -6,11 +6,13 @@
     <title>Title</title>
 </head>
 <body>
+<div class="div_center">
 <ul>
     <li><a class="active" href="1.html" name="up">Главная</a></li>
     <li><a href="login_page.html">Вход</a></li>
     <li><a href="registration_page.html">Регистрация</a></li>
     <li><a href="trash1.html">Корзина</a></li>
+    <li><a href="Admin.html"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTmwoIDVrYVdpsTCEWvKhDPy4uTkxT64dm51W086fDV9d_-j4YTlg" width="35px" height="35px"></a></li>
 </ul>
 </br> </br> </br>
 <div id="header"<h2><b>Корзина</b></h2>
@@ -36,10 +38,11 @@
 <!--        dsb-->
 <!--    </div>-->
 <!--</div>-->
-<table><center>
-    <div id="footer">&copy bsharna, dbreiten
-    </div>
-</center>
-</table>
+<!--<table>-->
+<!--    <div id="footer">&copy bsharna, dbreiten-->
+<!--    </div>-->
+
+<!--</table>-->
+</div>
 </body>
 </html>
